--- a/styles/style.css
+++ b/styles/style.css
@@ -1,30 +1,83 @@
-html {
-  font-size: 10px; /* px means "pixels": the base font size is now 10 pixels high */
-  font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
-  background-color: #00539f;
+* {
+  box-sizing: border-box;
 }
 body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #ff9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
+  /* margin: 0; Remove default margin */
+  display: flex;
+  justify-content: center; /* Horizontally center the container */
+  background-color: #222831;
 }
-h1 {
-  margin: 0;
-  padding: 20px 0;
-  color: #00539f;
-  text-shadow: 3px 3px 1px black;
-  font-size: 60px;
-  text-align: center;
+
+.blue-container {
+  width: 65%;
+  height: 1100px; /* Set the width of the container, adjust as needed */
+  max-width: 1200px; /* Optional: maximum width to prevent it from growing too large on wide screens */
+  min-width: 320px; /* Optional: minimum width for smaller devices */
+  background-color: #27384c;
+  /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
-p,
-li {
-  font-size: 16px;
-  line-height: 2;
-  letter-spacing: 1px;
+
+.white-container {
+  width: 90%;
+  height: 90%;
+  margin: 45px;
+  background-color: #f3f6fa;
+  border-radius: 30px;
+  padding: 15px;
 }
-img {
-  display: block;
-  margin: 0 auto;
+
+.first-container {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: -15px;
+  display: flex;
+  background-color: #dfdfdf;
+  border-radius: 30px;
+}
+
+.first-container-first-block {
+  margin-left: 15px;
+  margin-right: 60px;
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.first-container-second-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.holder {
+  display: flex;
+  flex-direction: row;
+}
+
+.third-container {
+  padding-left: 80px;
+}
+
+.third-container-a {
+  padding-left: 40px;
+}
+
+.third-container-a img {
+  width: 200px;
+  height: 200px;
+  border: 5px solid #27384c;
+  border-radius: 50%;
+}
+
+.third-container-b {
+  padding-left: -80px;
+  padding-left: 15px;
+  height: 90%;
+  background-color: #27384c;
+  border-radius: 20px;
+  color: #ffffff;
 }
